--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -127,7 +127,9 @@ services:
   elasticsearch:
     container_name: elasticsearch
     hostname: elasticsearch
-    image: docker.elastic.co/elasticsearch/elasticsearch-oss:7.9.3
+    build:
+      context: docker/elasticsearch
+      dockerfile: Dockerfile
     environment:
       discovery.type: single-node
       ES_JAVA_OPTS: -Xms512m -Xmx512m
