--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -261,6 +261,8 @@ services:
     ports:
       - published: $ADMINER_PORT
         target: 8080
+    environment:
+      ADMINER_DESIGN: $ADMINER_DESIGN
 
 volumes:
   imageproxy-redis-data:
