環境変数更新

--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,7 @@ IMAGEPROXY_BASE_URL="http://localhost:${IMAGEPROXY_PORT}"
 
 # Auth Server
 AUTH_SERVER_PORT=10001
+AUTH_SERVER_SESSION_NAME="bo2kshelf.sid"
 AUTH_SERVER_SESSION_SECRET=# openssl rand --hex  64
 AUTH_SERVER_JWT_SECRET=# openssl rand --hex  64
 AUTH_SERVER_MONGO_USERNAME="user"
