--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -107,6 +107,8 @@ services:
     image: neo4j:4.2@sha256:732105228bb4baefe77361def4cd4709c31061abc98387bf9d09730447cd8ece
     networks:
       - neo4j-api
+      - readonly-neo4j
+      - writable-neo4j
     ports:
       - published: $NEO4J_API_NEO4J_HTTP_PORT
         target: 7474
@@ -153,6 +155,8 @@ services:
     image: mysql:8.0@sha256:00b627abbd6e91d5d0e4be786869930497b9759bf40db3f15408bb894daf5263
     networks:
       - users-api
+      - readonly-users-db
+      - writable-users-db
     ports:
       - published: $USERS_API_MYSQL_PORT
         target: 3306
@@ -280,10 +284,151 @@ services:
     environment:
       ADMINER_DESIGN: $ADMINER_DESIGN
 
+  # public-api
+  public-api-gateway:
+    restart: always
+    image: ghcr.io/bo2kshelf/public-api-gateway:develop
+    depends_on:
+      bookcover-service:
+        condition: service_started
+      read-users-service:
+        condition: service_started
+      read-contents-service:
+        condition: service_started
+      read-records-service:
+        condition: service_started
+    networks:
+      - bookcover
+      - read-users
+      - read-contents
+      - read-records
+    ports:
+      - published: ${PUBLIC_API_PORT}
+        target: 4000
+    environment:
+      PORT: 4000
+      BOOKCOVER_SERVICE_URL: http://bookcover-service:4000/graphql
+      READ_USERS_SERVICE_URL: http://read-users-service:4000/graphql
+      READ_CONTENTS_SERVICE_URL: http://read-contents-service:4000/graphql
+      READ_RECORDS_SERVICE_URL: http://read-records-service:4000/graphql
+
+  read-users-service:
+    restart: always
+    image: ghcr.io/bo2kshelf/read-users-service:develop
+    depends_on:
+      users-api-mysql:
+        condition: service_healthy
+    networks:
+      - imageproxy
+      - read-users
+      - readonly-users-db
+    environment:
+      PORT: 4000
+      PRISMA_DATABASE_URL: mysql://root:${USERS_API_MYSQL_ROOT_PASSWORD}@users-api-mysql:3306/${USERS_API_MYSQL_DATABASE}
+      IMAGEPROXY_BASE_URL: $IMAGEPROXY_BASE_URL
+
+  read-contents-service:
+    restart: always
+    image: ghcr.io/bo2kshelf/read-contents-service:develop
+    depends_on:
+      neo4j-api-neo4j:
+        condition: service_healthy
+    networks:
+      - read-contents
+      - readonly-neo4j
+    environment:
+      PORT: 4000
+      NEO4J_URL: bolt://neo4j-api-neo4j:7687
+      NEO4J_USERNAME: ${NEO4J_API_NEO4J_USERNAME}
+      NEO4J_PASSWORD: ${NEO4J_API_NEO4J_PASSWORD}
+
+  read-records-service:
+    restart: always
+    image: ghcr.io/bo2kshelf/read-records-service:develop@sha256:03966ab97aed41d226793ed863781741d83c5cc1e1d1dfcb52b847b2e9b100cc
+    depends_on:
+      neo4j-api-neo4j:
+        condition: service_healthy
+    networks:
+      - read-records
+      - readonly-neo4j
+    environment:
+      PORT: 4000
+      NEO4J_URL: bolt://neo4j-api-neo4j:7687
+      NEO4J_USERNAME: ${NEO4J_API_NEO4J_USERNAME}
+      NEO4J_PASSWORD: ${NEO4J_API_NEO4J_PASSWORD}
+
+  bookcover-service:
+    restart: always
+    image: ghcr.io/bo2kshelf/bookcover-service:develop@sha256:b18da695a196e9665e562eace65d65f669620a554607c87fc3a4573594769a07
+    networks:
+      - bookcover
+      - imageproxy
+    depends_on:
+      bookcover-service-redis:
+        condition: service_healthy
+    environment:
+      PORT: 4000
+      RAKUTEN_APPLICATION_ID: $RAKUTEN_APPLICATION_ID
+      RAKUTEN_APPLICATION_SECRET: $RAKUTEN_APPLICATION_SECRET
+      IMAGEPROXY_BASE_URL: $IMAGEPROXY_BASE_URL
+      REDIS_HOST: bookcover-service-redis
+      REDIS_PORT: 6379
+
+  bookcover-service-redis:
+    restart: always
+    image: redis:6@sha256:2d17fb90c268b1c7799234216c875490a35fe8fa13fbc5495b7247d93e77255e
+    healthcheck: *redis-healthcheck
+    networks:
+      - bookcover
+    volumes:
+      - bookcover-service-redis-data:/data
+
+  # management
+  management-api-gateway:
+    restart: always
+    image: ghcr.io/bo2kshelf/management-api-gateway:develop@sha256:dabb3121952b1e90ba0913e94a8c85dd77947e0acb86bc2164a8e7510766d6fd
+    depends_on:
+      bookcover-service:
+        condition: service_started
+      read-users-service:
+        condition: service_started
+      read-contents-service:
+        condition: service_started
+      read-records-service:
+        condition: service_started
+    networks:
+      - bookcover
+      - read-contents
+      - edit-contents
+    ports:
+      - published: ${MANAGEMENT_API_PORT}
+        target: 4000
+    environment:
+      PORT: 4000
+      BOOKCOVER_SERVICE_URL: http://bookcover-service:4000/graphql
+      READ_CONTENTS_SERVICE_URL: http://read-contents-service:4000/graphql
+      EDIT_CONTENTS_SERVICE_URL: http://edit-contents-service:4000/graphql
+
+  edit-contents-service:
+    restart: always
+    image: ghcr.io/bo2kshelf/edit-contents-service:develop@sha256:7f8653677f40414c88a9ec183a11bb24c3c3fec8c325c582002cbda3458a607b
+    depends_on:
+      neo4j-api-neo4j:
+        condition: service_healthy
+    networks:
+      - edit-contents
+      - writable-neo4j
+    environment:
+      PORT: 4000
+      NEO4J_URL: bolt://neo4j-api-neo4j:7687
+      NEO4J_USERNAME: ${NEO4J_API_NEO4J_USERNAME}
+      NEO4J_PASSWORD: ${NEO4J_API_NEO4J_PASSWORD}
+
 volumes:
   imageproxy-redis-data:
   users-api-mysql-data:
   bookcover-api-redis-data:
+  bookcover-service-redis-data:
   neo4j-api-neo4j-data:
   neo4j-api-neo4j-logs:
   neo4j-api-neo4j-import:
@@ -294,6 +439,33 @@ volumes:
 
 networks:
   imageproxy:
+    driver: bridge
+
+  bookcover:
+    driver: bridge
+
+  readonly-neo4j:
+    driver: bridge
+
+  writable-neo4j:
+    driver: bridge
+
+  readonly-users-db:
+    driver: bridge
+
+  writable-users-db:
+    driver: bridge
+
+  read-users:
+    driver: bridge
+
+  read-contents:
+    driver: bridge
+
+  read-records:
+    driver: bridge
+
+  edit-contents:
     driver: bridge
 
   auth-server:
